# GreatestShop

./: .gitignore  README.md  manage.py  pyproject.toml
GreatestShop/: asgi.py  settings.py  urls.py  wsgi.py
account/: forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_orderdetails_product.py
account/static/account/css/: signup.css
account/templates/account/: login.html  signup.html
market/: models.py  urls.py  views.py
market/migrations/: 0001_initial.py  0002_alter_product_brand.py
market/static/market/css/: styles.css
templates/: base.html
