[tool.poetry]
name = "greatestshop"
version = "0.1.0"
description = "Django Marketplace Pet Project"
authors = ["ZMichael3012 <michael.zaplatin@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.0.3"
psycopg2 = "^2.9.3"
requests = "^2.27.1"
jinja2 = "^3.0.3"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
